Se deja casi terminada la sección principal

--- a/about.html
+++ b/about.html
@@ -66,8 +66,8 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link active">Sobre Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Nuestros Servicios</a>
-                        <a href="blog.html" class="nav-item nav-link">Seguros</a>
+                        <a href="service.html" class="nav-item nav-link">Seguros</a>
+                        <a href="blog.html" class="nav-item nav-link">Nuestro Blog</a>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         </div>
                     </div>
@@ -82,14 +82,7 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="mb-4 mb-md-0 text-white">About Us</h1>
-                </div>
-                <div class="col-md-6 text-center text-md-right">
-                    <div class="d-inline-flex align-items-center">
-                        <a class="btn text-white" href="">Home</a>
-                        <i class="fas fa-angle-right text-white"></i>
-                        <a class="btn text-white disabled" href="">About Us</a>
-                    </div>
+                    <h1 class="mb-4 mb-md-0 text-white">Sobre Nosotros</h1>
                 </div>
             </div>
         </div>
@@ -102,36 +95,44 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid" src="img/about.jpg" alt="">
+                    <img id= "sobreNosotros"class="img-fluid" src="" alt="">
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
-                    <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Learn About Us</h6>
-                    <h1 class="mb-4">We Are Quality Laundry Provider In Your City</h1>
-                    <h5 class="font-weight-medium font-italic mb-4">Clita sit et ipsum sed. Volup duo sea dolor rebum ea rebum kasd stet. Dolor at duo dolor sit stet.</h5>
-                    <p class="mb-2">Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+                    <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Te brindamos una asesoría integral</h6>
+                    <h1 class="mb-4"> Euyenid & Edder <br>Asesores de seguros</h1>
+                    <p class="mb-2"> Somos una agencia de seguros con más de <b>40 años de experiencia </b> en el sector.
+                        Nos especializamos en brindar soluciones de protección y seguridad a nuestros clientes. Nuestra agencia fue fundada con el objetivo de ofrecer
+                        un servicio confiable y personalizado a cada uno de nuestros asegurados. Durante estos más de 40 años, hemos trabajado arduamente
+                        para construir una sólida reputación basada en la excelencia y la satisfacción del cliente.
+                        <br><br>
+                        En <b> Euyenid & Edder, Asesores de seguros,</b> entendemos que cada persona y cada empresa tiene necesidades de protección únicas. Por eso, nos esforzamos en conocer
+                        a fondo las necesidades y prioridades de nuestros clientes para ofrecerles  las mejores soluciones de seguros que se ajusten a sus requerimientos
+                        específicos.
+                        <br><br>
+                        Como asesores estamos dispuestos a brindarte:</p>
                     <div class="row">
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">Quality Laundry Service</p>
+                                <p class="text-secondary font-weight-medium m-0">Servicio de calidad</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">Express Fast Delivery</p>
+                                <p class="text-secondary font-weight-medium m-0">Amplio portafolio en seguros</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">Highly Professional Staff</p>
+                                <p class="text-secondary font-weight-medium m-0">Asesoría especializada</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">100% Satisfaction Gguarantee</p>
+                                <p class="text-secondary font-weight-medium m-0">100% de Satisfacción</p>
                             </div>
                         </div>
                     </div>
@@ -143,41 +144,30 @@
 
 
     <!-- Working Process Start -->
-    <div class="container-fluid pt-5">
+    <div class="container-fluid py-5">
         <div class="container">
-            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Working Process</h6>
-            <h1 class="display-4 text-center mb-5">How We Work</h1>
             <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 150px; height: 150px; border-width: 15px !important;">
-                            <h2 class="display-2 text-secondary m-0">1</h2>
+                <div class="col-lg-7 m-0 my-lg-5 pt-0 pt-lg-5 pr-lg-5">
+                    <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Nuestro recorrido</h6>
+                    <h1 class="mb-4">¿Por qué elegirnos?</h1>
+                    <p>Con más de 40 años en el mercado, nuestra empresa se destaca por ofrecer soluciones personalizadas,
+                        atención excepcional y una amplia gama de coberturas. ¡Confía en nosotros para proteger lo que más valoras!</p>
+                    <div class="row">
+                        <div class="col-sm-6 mb-4">
+                            <h1 class="text-secondary" data-toggle="counter-up">40</h1>
+                            <h5 class="font-weight-bold">Años de experiencia</h5>
                         </div>
-                        <h3 class="font-weight-bold m-0 mt-2">Order Place</h3>
+                        <div class="col-sm-6 mb-4">
+                            <h1 class="text-secondary" data-toggle="counter-up">1250</h1>
+                            <h5 class="font-weight-bold">Clientes satisfechos</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 150px; height: 150px; border-width: 15px !important;">
-                            <h2 class="display-2 text-secondary m-0">2</h2>
-                        </div>
-                        <h3 class="font-weight-bold m-0 mt-2">Free Pick Up</h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 150px; height: 150px; border-width: 15px !important;">
-                            <h2 class="display-2 text-secondary m-0">3</h2>
-                        </div>
-                        <h3 class="font-weight-bold m-0 mt-2">Dry Cleaning</h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
-                        <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 150px; height: 150px; border-width: 15px !important;">
-                            <h2 class="display-2 text-secondary m-0">4</h2>
-                        </div>
-                        <h3 class="font-weight-bold m-0 mt-2">Free Delivery</h3>
+                <div class="col-lg-5">
+                    <div class="d-flex flex-column align-items-center justify-content-center bg-secondary h-100 py-5 px-3">
+                        <i class="fa fa-5x fa-certificate text-white mb-5"></i>
+                        <h1 class="display-1 text-white mb-3">+40</h1>
+                        <h1 class="text-white m-0">Años de experiencia</h1>
                     </div>
                 </div>
             </div>
@@ -187,37 +177,41 @@
 
 
     <!-- Features Start -->
-    <div class="container-fluid py-5">
+    <div class="container-fluid pt-5">
         <div class="container">
+            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">¿Qué hacemos por ti?</h6>
+            <h1 class="display-4 text-center mb-5">NUESTRO TRABAJO</h1>
             <div class="row">
-                <div class="col-lg-7 m-0 my-lg-5 pt-0 pt-lg-5 pr-lg-5">
-                    <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Our Features</h6>
-                    <h1 class="mb-4">Why Choose Us</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
-                    <div class="row">
-                        <div class="col-sm-6 mb-4">
-                            <h1 class="text-secondary" data-toggle="counter-up">10</h1>
-                            <h5 class="font-weight-bold">Years Expereince</h5>
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 150px; height: 150px; border-width: 15px !important;">
+                            <h2 class="display-2 text-secondary m-0">1</h2>
                         </div>
-                        <div class="col-sm-6 mb-4">
-                            <h1 class="text-secondary" data-toggle="counter-up">250</h1>
-                            <h5 class="font-weight-bold">Expert Worker</h5>
-                        </div>
-                        <div class="col-sm-6 mb-4">
-                            <h1 class="text-secondary" data-toggle="counter-up">1250</h1>
-                            <h5 class="font-weight-bold">Happy Clients</h5>
-                        </div>
-                        <div class="col-sm-6 mb-4">
-                            <h1 class="text-secondary" data-toggle="counter-up">9550</h1>
-                            <h5 class="font-weight-bold">Dry Cleaning</h5>
-                        </div>
+                        <h3 class="font-weight-bold m-0 mt-2">Conocimiento y experiencia</h3>
                     </div>
                 </div>
-                <div class="col-lg-5">
-                    <div class="d-flex flex-column align-items-center justify-content-center bg-secondary h-100 py-5 px-3">
-                        <i class="fa fa-5x fa-certificate text-white mb-5"></i>
-                        <h1 class="display-1 text-white mb-3">10+</h1>
-                        <h1 class="text-white m-0">Years Experience</h1>
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 150px; height: 150px; border-width: 15px !important;">
+                            <h2 class="display-2 text-secondary m-0">2</h2>
+                        </div>
+                        <h3 class="font-weight-bold m-0 mt-2">Personalización de las soluciones</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 150px; height: 150px; border-width: 15px !important;">
+                            <h2 class="display-2 text-secondary m-0">3</h2>
+                        </div>
+                        <h3 class="font-weight-bold m-0 mt-2">Ética y transparencia</h3>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 150px; height: 150px; border-width: 15px !important;">
+                            <h2 class="display-2 text-secondary m-0">4</h2>
+                        </div>
+                        <h3 class="font-weight-bold m-0 mt-2">Asistencia en reclamaciones</h3>
                     </div>
                 </div>
             </div>
@@ -234,11 +228,10 @@
                 <p>Nuestra experiencia de más de 40 años. Nos caracteriza por prestar un servicio de alta calidad en asesoramiento.
                   en seguros de salud, vida, vehículo y general.</p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
-                </div>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.facebook.com/EyEseguros" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="http://instagram.com/eyeseguros" target="_blank"><i class="fab fa-instagram"></i></a>                </div>
             </div>
             <div class="col-lg-4 col-md-12 mb-5 pl-5">
                 <h4 class="text-white mb-5">Ponerse en contacto</h4>
@@ -251,8 +244,8 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="index.html" class="border-bottom text-white nav-item nav-link ">Inicio</a>
                     <a href="about.html" class="border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
-                    <a href="service.html" class="border-bottom text-white nav-item nav-link">Nuestros Servicios</a>
-                    <a href="blog.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
+                    <a href="service.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
+                    <a href="blog.html" class="border-bottom text-white nav-item nav-link">Nuestro Blog</a>
                     <a href="contact.html" class="border-bottom text-white nav-item nav-link">Contacto</a>
                 </div>
             </div>
