--- a/service.html
+++ b/service.html
@@ -66,8 +66,8 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link active">Nuestros Servicios</a>
-                        <a href="blog.html" class="nav-item nav-link">Seguros</a>
+                        <a href="service.html" class="nav-item nav-link active">Seguros</a>
+                        <a href="blog.html" class="nav-item nav-link">Nuestro Blog</a>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
@@ -82,14 +82,7 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="mb-4 mb-md-0 text-white">Our Services</h1>
-                </div>
-                <div class="col-md-6 text-center text-md-right">
-                    <div class="d-inline-flex align-items-center">
-                        <a class="btn text-white" href="">Home</a>
-                        <i class="fas fa-angle-right text-white"></i>
-                        <a class="btn text-white disabled" href="">Services</a>
-                    </div>
+                    <h1 class="mb-4 mb-md-0 text-white">Seguros</h1>
                 </div>
             </div>
         </div>
@@ -100,18 +93,18 @@
     <!-- Services Start -->
     <div class="container-fluid pt-5 pb-3">
         <div class="container">
-            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Our Services</h6>
-            <h1 class="display-4 text-center mb-5">What We Offer</h1>
+            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Nuestros servicios</h6>
+            <h1 class="display-4 text-center mb-5">¿QUÉ OFRECEMOS?</h1>
             <div class="row">
-                <div class="col-lg-3 col-md-6 pb-1">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center bg-light mb-4 px-4" style="height: 300px;">
+                <div class="col-lg-7 col-md-6 pb-1">
+                    <div class="d-flex flex-column align-items-center justify-content-center text-center bg-light mb-4 px-4" style="height: 500px;">
                         <div class="d-inline-flex align-items-center justify-content-center bg-white shadow rounded-circle mb-4" style="width: 100px; height: 100px;">
                             <i class="fa fa-3x fa-cloud-sun text-secondary"></i>
                         </div>
                         <h4 class="font-weight-bold m-0">Dry Cleaning</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 pb-1">
+                <div class="col-lg-5 col-md-6 pb-1">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center bg-light mb-4 px-4" style="height: 300px;">
                         <div class="d-inline-flex align-items-center justify-content-center bg-white shadow rounded-circle mb-4" style="width: 100px; height: 100px;">
                             <i class="fas fa-3x fa-soap text-secondary"></i>
@@ -225,11 +218,10 @@
                 <p>Nuestra experiencia de más de 40 años. Nos caracteriza por prestar un servicio de alta calidad en asesoramiento.
                   en seguros de salud, vida, vehículo y general.</p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
-                </div>
+                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.youtube.com/@EyESeguros" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.facebook.com/EyEseguros" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="http://instagram.com/eyeseguros" target="_blank"><i class="fab fa-instagram"></i></a>                </div>
             </div>
             <div class="col-lg-4 col-md-12 mb-5 pl-5">
                 <h4 class="text-white mb-5">Ponerse en contacto</h4>
@@ -242,8 +234,8 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="index.html" class="border-bottom text-white nav-item nav-link ">Inicio</a>
                     <a href="about.html" class="border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
-                    <a href="service.html" class="border-bottom text-white nav-item nav-link">Nuestros Servicios</a>
-                    <a href="blog.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
+                    <a href="service.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
+                    <a href="blog.html" class="border-bottom text-white nav-item nav-link">Nuestro Blog</a>
                     <a href="contact.html" class="border-bottom text-white nav-item nav-link">Contacto</a>
                 </div>
             </div>
